--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: Hiiragi2013
 Type: Package
 Title: Cell-to-cell gene expression variability followed by reinforcement progressively segregates lineages in the early mouse embryo
-Version: 0.1.4
+Version: 0.99.0
 Author: Andrzej Oles, Wolfgang Huber
 Maintainer: Andrzej Oles <andrzej.oles@embl.de>
-Description: This package contains the experimental data and a complete executable transcript (vignette) of the statistical analysis presented in the paper "Cell-to-cell gene expression variability followed by reinforcement progressively segregates lineages in the early mouse embryo" by Y. Ohnishi, W. Huber, A. Tsumura, M. Kang, P. Xenopoulos, K. Kurimoto, A. Oles, M. J. Arauzo-Bravo, M. Saitou, A.-K. Hadjantonakis and T. Hiiragi.
+Description: This package contains the experimental data and a complete executable transcript (vignette) of the statistical analysis presented in the paper "Cell-to-cell gene expression variability followed by reinforcement progressively segregates lineages in the early mouse embryo" by Y. Ohnishi, W. Huber, A. Tsumura, M. Kang, P. Xenopoulos, K. Kurimoto, A. K. Oles, M. J. Arauzo-Bravo, M. Saitou, A.-K. Hadjantonakis and T. Hiiragi.
 License: Artistic-2.0
 LazyLoad: true
 Depends: R (>= 3.0.0), Biobase, boot, clue, cluster, genefilter, geneplotter, gplots, KEGGREST, latticeExtra, mouse4302.db, RColorBrewer, xtable 
