--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,6 @@ Maintainer: Andrzej Oles <andrzej.oles@embl.de>
 Description: This package contains the experimental data and a complete executable transcript (vignette) of the statistical analysis presented in the paper "Cell-to-cell gene expression variability followed by reinforcement progressively segregates lineages in the early mouse embryo" by Y. Ohnishi, W. Huber, A. Tsumura, M. Kang, P. Xenopoulos, K. Kurimoto, A. K. Oles, M. J. Arauzo-Bravo, M. Saitou, A.-K. Hadjantonakis and T. Hiiragi.
 License: Artistic-2.0
 LazyLoad: true
-Depends: R (>= 3.0.0), Biobase, boot, clue, cluster, genefilter, geneplotter, gplots, KEGGREST, latticeExtra, mouse4302.db, RColorBrewer, xtable 
+Depends: R (>= 3.0.0), affy, Biobase, boot, clue, cluster, genefilter, geneplotter, gplots, KEGGREST, latticeExtra, mouse4302.db, RColorBrewer, xtable 
 Suggests: BiocStyle
 biocViews: ExperimentData
