--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: Hiiragi2013
 Type: Package
 Title: Cell-to-cell expression variability followed by signal reinforcement progressively segregates early mouse lineages
-Version: 0.99.16
+Version: 0.99.17
 Author: Andrzej Oles, Wolfgang Huber
 Maintainer: Andrzej Oles <andrzej.oles@embl.de>
-Description: This package contains the experimental data and a complete executable transcript (vignette) of the statistical analysis presented in the paper "Cell-to-cell expression variability followed by signal reinforcement progressively segregates early mouse lineages" by Y. Ohnishi, W. Huber, A. Tsumura, M. Kang, P. Xenopoulos, K. Kurimoto, A. K. Oles, M. J. Arauzo-Bravo, M. Saitou, A.-K. Hadjantonakis and T. Hiiragi; Nature Cell Biology (2013). doi:10.1038/ncb2881"
+Description: This package contains the experimental data and a complete executable transcript (vignette) of the statistical analysis presented in the paper "Cell-to-cell expression variability followed by signal reinforcement progressively segregates early mouse lineages" by Y. Ohnishi, W. Huber, A. Tsumura, M. Kang, P. Xenopoulos, K. Kurimoto, A. K. Oles, M. J. Arauzo-Bravo, M. Saitou, A.-K. Hadjantonakis and T. Hiiragi; Nature Cell Biology (2014) 16(1): 27-37. doi: 10.1038/ncb2881."
 License: Artistic-2.0
 LazyLoad: true
 Depends: R (>= 3.0.0), affy, Biobase, boot, clue, cluster, genefilter, geneplotter, gplots, grid, gtools, KEGGREST, lattice, latticeExtra, MASS, mouse4302.db, RColorBrewer, xtable
