Add 'qPCRData' to biocViews
git-svn-id: file:///home/git/bioc-data.hedgehog.fhcrc.org/trunk/experiment/pkgs/Hiiragi2013@3144 db2202da-8704-0410-b924-b125b3cd84ef

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,4 +10,4 @@ LazyLoad: true
 Depends: R (>= 3.0.0), affy, Biobase, boot, clue, cluster, genefilter, geneplotter, gplots, gtools, KEGGREST, MASS, mouse4302.db, RColorBrewer, xtable
 Imports: grid, lattice, latticeExtra
 Suggests: ArrayExpress, BiocStyle
-biocViews: ExperimentData, MicroarrayData
+biocViews: ExperimentData, MicroarrayData, qPCRData
